--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -121,3 +121,82 @@ footer {
 a:hover {
   opacity: 0.6;
 }
+
+@media (max-width: 500px) {
+  footer {
+    background-color: rgb(255, 255, 255);
+
+    // margin-top: 20vh;
+
+    .footer--container {
+      height: 30vh;
+
+      .footer {
+        .footer--head {
+          .footer--head--one {
+            a {
+              font-size: 1rem;
+            }
+          }
+
+          .footer--head--three {
+            a {
+              font-size: 1rem;
+            }
+          }
+          .logo--container {
+            // width: 10%;
+            // height: 100%;
+            margin-left: auto;
+            // border: 1px solid black;
+            padding: 20px;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+
+            .title--container {
+              display: flex;
+              // border: 1px solid black;
+              h1 {
+                padding: 0;
+                margin: 2px 5px;
+                font-size: 2rem;
+                font-family: "Archivo", sans-serif;
+                font-weight: 200;
+              }
+              div {
+                width: 25px;
+                height: 25px;
+                background-color: rgb(0, 0, 184);
+                border-radius: 50%;
+                // margin: 0 5px;
+              }
+              span {
+                font-family: "Questrial", sans-serif;
+                font-size: 1rem;
+                font-weight: 400;
+                color: rgb(31, 31, 31);
+              }
+            }
+          }
+        }
+
+        .footer-paragraph {
+          border-top: 1px solid black;
+          padding-top: 20px;
+          text-align: center;
+          position: absolute;
+          color: #000000;
+          bottom: 10%;
+          width: 100%;
+          font-family: "Questrial", sans-serif;
+          font-weight: 200;
+          font-size: 12px;
+          p {
+            margin: 0;
+          }
+        }
+      }
+    }
+  }
+}
