--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -32,6 +32,7 @@ header {
         font-size: 15px;
         font-family: "Questrial", sans-serif;
         font-weight: 200;
+        text-decoration: none;
       }
 
       .nav--link:hover {
