--- a/src/Pages/FifthPage/FifthPage.scss
+++ b/src/Pages/FifthPage/FifthPage.scss
@@ -61,3 +61,59 @@
     }
   }
 }
+
+@media (max-width: 500px) {
+  .fourth-page {
+    height: 50vh;
+    width: 100%;
+    background-color: rgb(255, 255, 255); // can change back
+    // Cover card
+    margin-top: -20%;
+    z-index: 3;
+    position: relative;
+    // border: 1px solid black;
+
+    .fourth-page--container {
+      width: 100%;
+      height: 100%;
+      margin: 0 auto;
+      display: flex;
+      // border: 1px solid black;
+
+      .text--container {
+        width: 100%;
+        height: 40%;
+        color: rgb(0, 0, 0);
+        margin: auto;
+
+        // position: relative;
+
+        text-align: center;
+        padding-top: 0vh;
+
+        h1 {
+          margin: 10px auto;
+          font-family: "Questrial", sans-serif;
+          font-size: 0.6rem;
+          font-weight: 200;
+          width: 60%;
+        }
+
+        h1:hover {
+          opacity: 0.6;
+        }
+
+        a {
+          text-decoration: none;
+          h1 {
+            width: 100%;
+            font-size: 3rem;
+            font-weight: 600;
+            color: rgb(0, 0, 0);
+            font-family: "Archivo", sans-serif;
+          }
+        }
+      }
+    }
+  }
+}
