--- a/src/Pages/FirstPage/FirstPage.scss
+++ b/src/Pages/FirstPage/FirstPage.scss
@@ -47,7 +47,6 @@
       }
 
       .right--container {
-        // border: 1px solid black;
         margin-top: auto;
         margin-left: auto;
         width: 150px;
@@ -104,6 +103,7 @@
         text-align: start;
         padding-right: 25px;
         position: absolute;
+        z-index: 5;
 
         p {
           font-family: "Questrial", sans-serif;
@@ -112,6 +112,79 @@
           color: rgb(248, 248, 248);
 
           font-size: 1rem;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: "500px") {
+  .first-page--container {
+    height: 100vh;
+    // z-index: 9;
+    border: 1px solid black;
+    width: 100%;
+
+    .container {
+      width: 100%;
+      height: 100%;
+      // border: 1px solid red;
+      background-color: rgb(255, 255, 255);
+
+      display: flex;
+      flex-direction: column;
+      .upper--container {
+        // display: none;
+        height: 10%;
+        width: 95%;
+        // border: 1px solid black;
+        // margin: 0 auto;
+        // display: flex;
+        // border: 1px solid black;
+        .left--container {
+          // border: 1px solid black;
+          margin-top: auto;
+          // margin-left: 25px;
+          display: none;
+        }
+
+        .right--container {
+          display: none;
+        }
+      }
+
+      .lower--container {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+        background-color: #fff;
+        position: relative;
+
+        img {
+          margin-top: 15vh;
+          width: 100%;
+          height: 50%;
+          background-size: cover;
+          background-position: center;
+        }
+
+        .right--container {
+          width: 90%;
+          height: 32%;
+          text-align: start;
+          position: relative;
+          margin: 0 auto;
+          padding: 0 10px;
+
+          p {
+            font-family: "Questrial", sans-serif;
+            line-height: 30px;
+            font-weight: 400;
+            color: rgb(0, 0, 0);
+            font-size: 2em;
+          }
         }
       }
     }
