--- a/src/Pages/SecondPage/SecondPage.scss
+++ b/src/Pages/SecondPage/SecondPage.scss
@@ -82,6 +82,9 @@
           // margin-left: 5px;
         }
       }
+      .second--img {
+        margin-left: 5px;
+      }
     }
 
     .card--container {
@@ -91,6 +94,7 @@
       height: 30%;
       padding: 0 25px;
       margin-top: 10px;
+      // width: 100%;
       // border: 1px solid black;
 
       .card {
@@ -132,6 +136,15 @@
             margin: 5px 0;
             // border: 1px solid black;
           }
+        }
+      }
+
+      .lower--card--container {
+        display: flex;
+        width: 50%;
+
+        .card {
+          width: 50%;
         }
       }
 
@@ -244,6 +257,283 @@
       .card--seven {
         width: 50%;
         background-color: rgba(255, 255, 255, 0.874);
+      }
+    }
+  }
+}
+
+@media (max-width: "500px") {
+  .second--container {
+    height: 150vh;
+    margin-top: 10vh;
+    position: relative;
+    // border: 1px solid black;
+
+    .main--container {
+      width: 95%;
+      height: 20%;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      // overflow: hidden;
+
+      .left--container {
+        width: 100%;
+        height: 100%;
+
+        // border: 1px solid black;
+        padding: 0;
+        // text-align: center;
+
+        h1 {
+          font-family: "Archivo", sans-serif;
+          font-weight: 500;
+          font-size: 2rem;
+          margin: 0;
+          line-height: 35px;
+        }
+
+        .soft--header {
+          color: rgb(0, 0, 0);
+        }
+
+        .main--header {
+          color: black;
+        }
+      }
+
+      .right--container {
+        // width: 100%;
+        // height: 25%;
+        display: none;
+        // border: 1px solid red;
+        // // border-left: 2px solid black;
+        // align-items: center;
+        // justify-content: center;
+
+        // img {
+        //   display: none;
+
+        //   width: 100%;
+        //   height: 100%;
+        //   background-size: cover;
+        //   background-position: center;
+        // }
+      }
+    }
+
+    .second--main--container {
+      // position: absolute;
+      height: 70%;
+      width: 100%;
+
+      margin-top: 5vh;
+      // border: 1px solid black;
+      .image--container {
+        width: 95%;
+        height: 50%;
+        // border: 1px solid black;
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+
+        .image--container--mini {
+          width: 100%;
+          height: 50%;
+          // border: 1px solid red;
+          display: flex;
+
+          img {
+            width: 100%;
+            background-size: cover;
+            background-position: center;
+            margin-bottom: 5px;
+
+            // margin-left: 5px;
+          }
+
+          .second--img {
+            margin-left: 0px;
+          }
+        }
+      }
+
+      .card--container {
+        display: flex;
+        // border: 1px solid red;
+        // flex-wrap: wrap;
+        flex-direction: column;
+        width: 100%;
+        height: 50%;
+        padding: 0;
+        margin-top: 5vh;
+        // border: 1px solid black;
+
+        .card {
+          width: 100%;
+          height: 40%;
+          margin: 0;
+          border-radius: 10px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          color: white;
+          position: relative;
+
+          h1 {
+            font-family: "Archivo", sans-serif;
+            font-size: 1rem;
+            font-weight: 200;
+            padding: 10px;
+            margin: 0;
+          }
+
+          p {
+            font-weight: 100;
+            font-size: 0.8rem;
+            font-family: "Questrial", sans-serif;
+            padding: 10px;
+          }
+          .lower--part {
+            display: flex;
+            justify-content: space-between;
+            // border: 1px solid white;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            .num {
+              display: none;
+              font-family: "Archivo", sans-serif;
+              font-size: 1.5rem;
+              font-weight: 200;
+              padding: 10px;
+              margin: 5px 0;
+              // border: 1px solid black;
+            }
+          }
+        }
+
+        // bottom: 10%;
+        .card--one {
+          border: none;
+          text-align: start;
+          box-shadow: none;
+          // margin: 0;
+          width: 100%;
+          height: 20%;
+          text-align: center;
+
+          // border: 1px solid black;
+
+          h1 {
+            font-family: "Archivo", sans-serif;
+            font-weight: 600;
+            font-size: 3rem;
+            // padding-left: 10%;
+
+            // margin-top: 40px;
+            // color: rgba(0, 0, 0, 0.747);
+            // color: transparent;
+            // -webkit-text-stroke: 2px black;
+            background-image: url("https://images.unsplash.com/photo-1567359781514-3b964e2b04d6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8YWJzdHJhY3R8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60");
+            background-clip: text;
+            -webkit-background-clip: text;
+            color: transparent;
+          }
+        }
+
+        .lower--card--container {
+          display: flex;
+          height: 40%;
+          width: 100%;
+          border: 1px solid red;
+
+          .card {
+            height: 100%;
+          }
+        }
+
+        .card--two {
+          background-color: rgba(0, 0, 0, 0.899);
+        }
+
+        .card--three {
+          background-color: rgba(0, 0, 0, 0.899);
+        }
+
+        .card--four {
+          width: 25%;
+          background-color: rgb(0, 0, 184);
+        }
+
+        .card--five {
+          width: 25%;
+          background-color: rgb(0, 0, 184);
+        }
+
+        .card:hover {
+          cursor: pointer;
+        }
+      }
+
+      .lower--container--dv {
+        height: 50%;
+        // width: 100%;
+        // border: 1px solid black;
+        display: flex;
+        flex-direction: row;
+        padding: 10px 25px;
+
+        .lower--card {
+          width: 50%;
+          height: 100%;
+          // border: 1px solid rgb(0, 0, 0);
+          margin: 0 5px;
+          border-radius: 10px;
+          box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+            rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+          color: rgb(0, 0, 0);
+          position: relative;
+
+          h1 {
+            font-family: "Archivo", sans-serif;
+            font-size: 1.5rem;
+            font-weight: 200;
+            padding: 10px;
+            margin: 5px 0;
+          }
+
+          p {
+            font-weight: 100;
+            font-size: 1rem;
+            font-family: "Questrial", sans-serif;
+            padding: 10px;
+          }
+          .lower--part--second {
+            display: flex;
+            justify-content: space-between;
+            // border: 1px solid white;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            .num {
+              font-family: "Archivo", sans-serif;
+              font-size: 1.5rem;
+              font-weight: 200;
+              padding: 10px;
+              margin: 5px 0;
+              // border: 1px solid black;
+            }
+          }
+        }
+
+        .card--six {
+          width: 25%;
+          background-color: rgba(255, 255, 255, 0.861);
+        }
+
+        .card--seven {
+          width: 50%;
+          background-color: rgba(255, 255, 255, 0.874);
+        }
       }
     }
   }
