--- a/src/Pages/ThirdPage/ThirdPage.scss
+++ b/src/Pages/ThirdPage/ThirdPage.scss
@@ -117,3 +117,104 @@
     }
   }
 }
+
+@media (max-width: 500px) {
+  .third-page {
+    height: 50vh;
+    background-color: rgb(255, 255, 255);
+
+    margin-top: 5vh;
+
+    .third-page--container {
+      max-width: 95%;
+      height: 80%;
+      display: flex;
+      margin: auto;
+      position: relative;
+      // border: 1px solid black;
+
+      img {
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center;
+      }
+
+      .article {
+        position: absolute;
+        top: 25%;
+        left: 0%;
+        width: 80%;
+        height: 50%;
+        padding: 0 30px;
+        //
+
+        // background-color: #f9f9f95d;
+
+        .article--heading {
+          // font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          //   Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          //   sans-serif;
+          font-family: "Archivo", sans-serif;
+
+          margin-top: 0;
+          color: #f9f9f9;
+
+          p {
+            margin-top: 0;
+          }
+        }
+        .h1--container {
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          // background-color: black;
+          .article--description {
+            // padding-right: 50px;
+            margin: 0;
+            font-family: "Archivo", sans-serif;
+            // font-family: "PT Sans", sans-serif;
+
+            font-size: 1rem;
+            line-height: 1.3;
+            text-align: justify;
+            color: #ffffff;
+            font-weight: 400;
+            text-align: center;
+            margin-bottom: 1rem;
+          }
+
+          .learn-more {
+            font-family: "Questrial", sans-serif;
+
+            font-size: 0.8rem;
+            padding: 0 25px;
+            color: rgb(255, 255, 255);
+            border: none;
+            font-weight: 200;
+
+            img {
+              width: 8px;
+              padding-left: 5px;
+            }
+          }
+        }
+
+        // .learn-more--btn:hover {
+        //   border: 1px solid rgb(0, 0, 0);
+        //   background-color: rgb(0, 0, 0);
+        //   color: rgb(255, 255, 255);
+        //   transition: 0.3s;
+        //   cursor: pointer;
+        // }
+      }
+
+      .particle-motion {
+        margin-top: 0;
+        width: 50%;
+        height: 100%; //need to fix later
+        // background-color: rgb(0, 0, 0);
+      }
+    }
+  }
+}
