--- a/src/Pages/SecondPage/SecondPage.scss
+++ b/src/Pages/SecondPage/SecondPage.scss
@@ -2,55 +2,60 @@
   height: 150vh;
   margin-top: 10vh;
   position: relative;
+  // border: 1px solid black;
 
-  .main--container {
-    width: 95%;
+  .header--container {
+    // height: 30%;
     height: 30%;
-    margin: 0 auto;
-    display: flex;
-    overflow: hidden;
-
-    border-radius: 10px;
-
-    .left--container {
-      width: 60%;
-      height: 70%;
-
-      // border: 1px solid black;
-      padding: 100px 0 0 20px;
-      // text-align: center;
-
-      h1 {
-        font-family: "Archivo", sans-serif;
-        font-weight: 200;
-        font-size: 3rem;
-        margin: 0;
-        line-height: 45px;
-      }
-
-      .soft--header {
-        color: rgb(111, 111, 111);
-      }
-
-      .main--header {
-        color: black;
-      }
-    }
-
-    .right--container {
-      width: 40%;
+    .main--container {
+      width: 95%;
       height: 100%;
+      margin: 0 auto;
       display: flex;
-      // border: 1px solid black;
-      // border-left: 2px solid black;
-      align-items: center;
-      justify-content: center;
+      overflow: hidden;
 
-      img {
-        // width: 100%;
-        // height: 100%;
-        background-size: cover;
-        background-position: center;
+      border-radius: 10px;
+
+      .left--container {
+        width: 60%;
+        height: 70%;
+
+        // border: 1px solid black;
+        padding: 100px 0 0 20px;
+        // text-align: center;
+
+        h1 {
+          font-family: "Archivo", sans-serif;
+          font-weight: 200;
+          font-size: 3rem;
+          margin: 0;
+          line-height: 45px;
+        }
+
+        .soft--header {
+          color: rgb(111, 111, 111);
+        }
+
+        .main--header {
+          color: black;
+        }
+      }
+
+      .right--container {
+        width: 40%;
+        height: 100%;
+        display: flex;
+        // border: 1px solid black;
+        // border-left: 2px solid black;
+        align-items: center;
+        justify-content: center;
+
+        img {
+          width: 100%;
+          height: 100%;
+          background-size: cover;
+          background-position: center;
+        }
       }
     }
   }
@@ -269,58 +274,60 @@
     height: 200vh;
     margin-top: 0;
     position: relative;
-    // border: 1px solid black;
 
-    .main--container {
-      width: 95%;
-      height: 20%;
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
+    .header--container {
       overflow: hidden;
-      // border: 1px solid black;
-
-      .left--container {
-        width: 100%;
+      height: 20%;
+      .main--container {
+        width: 95%;
         height: 100%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        // border: 1px solid black;
 
-        padding: 0;
-        // text-align: center;
+        .left--container {
+          width: 100%;
+          height: 100%;
 
-        h1 {
-          font-family: "Archivo", sans-serif;
-          font-weight: 500;
-          font-size: 2rem;
-          margin: 0;
-          line-height: 35px;
+          padding: 0;
+          // text-align: center;
+
+          h1 {
+            font-family: "Archivo", sans-serif;
+            font-weight: 500;
+            font-size: 2rem;
+            margin: 0;
+            line-height: 35px;
+          }
+
+          .soft--header {
+            color: rgb(0, 0, 0);
+          }
+
+          .main--header {
+            color: black;
+          }
         }
 
-        .soft--header {
-          color: rgb(0, 0, 0);
+        .right--container {
+          // width: 100%;
+          // height: 25%;
+          display: none;
+          // border: 1px solid red;
+          // // border-left: 2px solid black;
+          // align-items: center;
+          // justify-content: center;
+
+          // img {
+          //   display: none;
+
+          //   width: 100%;
+          //   height: 100%;
+          //   background-size: cover;
+          //   background-position: center;
+          // }
         }
-
-        .main--header {
-          color: black;
-        }
-      }
-
-      .right--container {
-        // width: 100%;
-        // height: 25%;
-        display: none;
-        // border: 1px solid red;
-        // // border-left: 2px solid black;
-        // align-items: center;
-        // justify-content: center;
-
-        // img {
-        //   display: none;
-
-        //   width: 100%;
-        //   height: 100%;
-        //   background-size: cover;
-        //   background-position: center;
-        // }
       }
     }
 
@@ -329,8 +336,8 @@
       height: 70%;
       width: 100%;
 
-      margin-top: 0vh;
-      // border: 1px solid black;
+      margin-top: 5vh;
+
       .image--container {
         width: 95%;
         height: 50%;
@@ -425,7 +432,7 @@
 
           h1 {
             font-family: "Archivo", sans-serif;
-            font-weight: 600;
+            font-weight: 500;
             font-size: 3rem;
             // padding-left: 10%;
 
@@ -433,10 +440,11 @@
             // color: rgba(0, 0, 0, 0.747);
             // color: transparent;
             // -webkit-text-stroke: 2px black;
-            background-image: url("https://images.unsplash.com/photo-1567359781514-3b964e2b04d6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8YWJzdHJhY3R8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60");
-            background-clip: text;
-            -webkit-background-clip: text;
-            color: transparent;
+            // background-image: url("https://images.unsplash.com/photo-1567359781514-3b964e2b04d6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8YWJzdHJhY3R8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60");
+            // background-clip: text;
+            // -webkit-background-clip: text;
+            // color: transparent;
+            color: black;
           }
         }
 
