--- a/src/Pages/SecondPage/SecondPage.scss
+++ b/src/Pages/SecondPage/SecondPage.scss
@@ -271,13 +271,18 @@
 
 @media (max-width: "500px") {
   .second--container {
-    height: 200vh;
+    height: 170vh;
     margin-top: 0;
     position: relative;
+    // border: 1px solid black;
+    // background-color: red;
+    overflow: hidden;
 
     .header--container {
       overflow: hidden;
       height: 20%;
+      // border: 1px solid black;
+
       .main--container {
         width: 95%;
         height: 100%;
@@ -336,7 +341,7 @@
       height: 70%;
       width: 100%;
 
-      margin-top: 5vh;
+      margin-top: 0;
 
       .image--container {
         width: 95%;
@@ -374,8 +379,9 @@
         width: 100%;
         height: 70%;
         padding: 0;
-        margin-top: 10vh;
+        margin-top: 0;
         // border: 1px solid black;
+        overflow: hidden;
 
         .card {
           width: 100%;
@@ -425,7 +431,7 @@
           box-shadow: none;
           // margin: 0;
           width: 100%;
-          height: 15%;
+          height: 10%;
           text-align: center;
 
           // border: 1px solid black;
