--- a/src/Pages/ThirdPage/ThirdPage.scss
+++ b/src/Pages/ThirdPage/ThirdPage.scss
@@ -98,6 +98,10 @@
 
 @media (max-width: 900px) {
   .third-page {
+    // border: 1px solid black;
+
+    // height: 150vh;
+
     .third-page--container {
       flex-direction: column;
 
@@ -123,7 +127,7 @@
     height: 50vh;
     background-color: rgb(255, 255, 255);
     position: relative;
-    margin-top: 30vh;
+    margin: 20vh 0;
 
     .third-page--container {
       max-width: 95%;
