--- a/src/Pages/FifthPage/FifthPage.scss
+++ b/src/Pages/FifthPage/FifthPage.scss
@@ -68,7 +68,7 @@
     width: 100%;
     background-color: rgb(255, 255, 255); // can change back
     // Cover card
-    margin-top: -20%;
+    margin-top: 0;
     z-index: 3;
     position: relative;
     // border: 1px solid black;
