--- a/src/Pages/AboutFirstPage/AboutFirstPage.scss
+++ b/src/Pages/AboutFirstPage/AboutFirstPage.scss
@@ -1,10 +1,10 @@
 .about--container {
   //   padding-top: 10vh;
-  //   border: 1px solid white;
+  // border: 1px solid black;
   height: 100%;
   padding: 20vh 0;
   position: relative;
-  margin-bottom: 20vh;
+  margin: 10vh 0 20vh 0;
 
   .header--container {
     // border: 1px solid white;
@@ -22,7 +22,7 @@
     .main--links {
       margin: 10px 20px;
       font-family: "Archivo", sans-serif;
-
+      // border: 1px solid black;
       text-decoration: none;
       font-size: 8rem;
       // color: transparent;
